<resources>
    <string name="app_name">EdgeDetection</string>
    <string name="camera_grant">Grant camera permission!</string>
    <string name="press_again_logout">Press back again.</string>
    <string name="crop">Crop</string>
    <string name="save">Save</string>
    <string name="export">Export</string>
    <string name="delete">Delete</string>
    <string name="enhance">Enhance</string>
    <string name="black">Black White</string>
    <string name="rotate">Rotate</string>
    <string name="reset">Reset</string>
    <string name="scan">Scanning</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="edit_scan">Edit Scan</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="review">Review</string>
    <string name="gray">Gray</string>
</resources>
